--- a/test/runner.html
+++ b/test/runner.html
@@ -6,7 +6,34 @@
   <link rel='stylesheet' href='../node_modules/mocha/mocha.css' />
 
 <svg width='500' height='300' viewBox='0 0 500 300'>
-   <rect id='testBox' x='250' y='150' width='200' height='200' fill='blue' />
+   <rect id='testBox' x='250' y='150' width='200' height='200' fill='blue' /> <!--
+   <rect id='main-content' x='250' y='150' width='200' height='200' fill='grey' />
+   <div></div>
+   <div></div>
+   <div></div> 
+   <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
+   <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
+   <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
+   <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
+   <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
+   <rect  x='250' y='150' width='200' height='200' fill='blue' />
+   <rect  x='250' y='150' width='200' height='200' fill='blue' />
+   <rect  x='250' y='150' width='200' height='200' fill='blue' />
+   <rect  x='250' y='150' width='200' height='200' fill='blue' />
+   <rect  x='250' y='150' width='200' height='200' fill='blue' />
+   <path d="M150 0 L75 200 L225 200 Z" />
+   <path d="M150 0 L75 200 L225 200 Z" />
+   <path d="M150 0 L75 200 L225 200 Z" />
+   <path d="M150 0 L75 200 L225 200 Z" />
+   <path d="M150 0 L75 200 L225 200 Z" />
+   <polygon points="200,10 250,190 160,210" style="fill:lime;stroke:purple;stroke-width:1" />
+   <polygon points="200,10 250,190 160,210" style="fill:lime;stroke:purple;stroke-width:1" />
+   <polygon points="200,10 250,190 160,210" style="fill:lime;stroke:purple;stroke-width:1" />
+   <polygon points="200,10 250,190 160,210" style="fill:lime;stroke:purple;stroke-width:1" />
+   <ellipse class='MyClass' cx="200" cy="80" rx="100" ry="50" style="fill:yellow;stroke:purple;stroke-width:2" />
+   <ellipse class='MyClass' cx="200" cy="80" rx="100" ry="50" style="fill:yellow;stroke:purple;stroke-width:2" />
+   <ellipse cx="200" cy="80" rx="100" ry="50" style="fill:yellow;stroke:purple;stroke-width:2" />
+   <ellipse cx="200" cy="80" rx="100" ry="50" style="fill:yellow;stroke:purple;stroke-width:2" /> -->
 </svg>
 
   <!-- Polyfill (required by Babel) -->
@@ -42,6 +69,19 @@ var style2 = {
 //
 //o0(testBox).$Attr$('fill','green');
 //console.log( o0(testBox).attr(style).attr('fill','orange').attr('stroke','red').get('Some Argument', 'and another') );
+
+/* 
+    // Organised selector config
+    o0(['mainContent', 'id', 'main-content'], // Gets element by Id
+      ['rectangle', 'tag', 'rect'],      // Gets element by tag
+      ['divisions', 'tag', 'div', 'col'],      // Gets collection by tag
+      ['fourthCirc', 'tag', 'circle', 'col', 3],    // Gets  element by tag of index 3 
+      ['allPaths', 'tag', 'path', 'all'],        // Gets collection by tag, loops though all (with API)
+      ['lastPolygon', 'tag', 'polygon', 'last'],          // Gets last element in collection by tag
+      ['faultyLight', 'tag', 'ellipse', 'last', -2],         // Gets third from last element in collection by tag 
+      ['myClass', 'class', 'thing2', 'col', 2]); // tag & class are interchangeable
+*/
+
 var fill = o0(testBox).get('fill');
 console.log( fill );
 //console.log( testBox, o0(testBox) );
