--- a/test/runner.html
+++ b/test/runner.html
@@ -5,8 +5,12 @@
   <title>Tests</title>
   <link rel='stylesheet' href='../node_modules/mocha/mocha.css' />
 
-<svg width='500' height='300' viewBox='0 0 500 300'>
-   <rect id='testBox' x='250' y='150' width='200' height='200' fill='blue' /> <!--
+<svg width='1000' height='500' viewBox='0 0 500 300'>
+   <rect  x='0' y='0' width='200' height='200' fill='blue' /> 
+   <rect id='testBox' x='250' y='150' width='200' height='200' fill='blue' /> 
+<circle id='circle' cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
+
+   <!--
    <rect id='main-content' x='250' y='150' width='200' height='200' fill='grey' />
    <div></div>
    <div></div>
@@ -58,13 +62,15 @@
 <script src='../dist/soucouyant.js'></script>
 <script>
 var testBox = document.getElementById('testBox');
-
+var testBoxes = document.getElementsByTagName('rect');
 var style = {
   fill: 'pink'
 };
 
 var style2 = {
-  fill: 'green'
+  fill: 'green',
+  stroke: 'red',
+  'stroke-width': 5
 };
 //
 //o0(testBox).$Attr$('fill','green');
@@ -82,8 +88,23 @@ var style2 = {
       ['myClass', 'class', 'thing2', 'col', 2]); // tag & class are interchangeable
 */
 
-var fill = o0(testBox).get('fill');
-console.log( fill );
+o0(['round', 'id', 'circle']);
+
+var round = o0.round;
+    o0(round).set('fill','#cc0000');
+
+var whatFill = o0(round).get('fill');
+
+console.log(whatFill);
+
+o0([testBoxes, 'all']);
+
+o0(testBox).set('fill','pink');
+o0(testBoxes[0]).set(style2);
+
+
+
+//console.log( fill );
 //console.log( testBox, o0(testBox) );
  //console.log( o0().anotherFn() );
 </script>
