--- a/test/runner.html
+++ b/test/runner.html
@@ -5,6 +5,30 @@
   <title>Tests</title>
   <link rel='stylesheet' href='../node_modules/mocha/mocha.css' />
 
+
+
+  <!-- Polyfill (required by Babel) -->
+  <script src='../node_modules/babel-core/browser-polyfill.js'></script>
+
+  <!-- Testing libraries -->
+  <script src='../node_modules/mocha/mocha.js'></script>
+  <script src='../node_modules/chai/chai.js'></script>
+  <script src='../node_modules/chai-jquery/chai-jquery.js'></script>
+  <script src='../node_modules/sinon/pkg/sinon.js'></script>
+  <script src='../node_modules/sinon-chai/lib/sinon-chai.js'></script>
+
+  <!-- Livereload -->
+<!--  <script src='http://localhost:35729/livereload.js'></script> -->
+
+  <!-- Load the built library -->
+  <script src='../tmp/__spec-build.js'></script>
+</head>
+<body>
+  <!-- Required for browser reporter -->
+  <div id='mocha'></div>
+
+ <!-- SVG tester -->
+
 <svg width='1000' height='500' viewBox='0 0 500 300'>
    <rect  x='0' y='0' width='200' height='200' fill='blue' /> 
    <rect id='testBox' x='250' y='150' width='200' height='200' fill='blue' /> 
@@ -39,25 +63,6 @@
    <ellipse cx="200" cy="80" rx="100" ry="50" style="fill:yellow;stroke:purple;stroke-width:2" />
    <ellipse cx="200" cy="80" rx="100" ry="50" style="fill:yellow;stroke:purple;stroke-width:2" /> -->
 </svg>
-
-  <!-- Polyfill (required by Babel) -->
-  <script src='../node_modules/babel-core/browser-polyfill.js'></script>
-
-  <!-- Testing libraries -->
-  <script src='../node_modules/mocha/mocha.js'></script>
-  <script src='../node_modules/chai/chai.js'></script>
-  <script src='../node_modules/sinon/pkg/sinon.js'></script>
-  <script src='../node_modules/sinon-chai/lib/sinon-chai.js'></script>
-
-  <!-- Livereload -->
-<!--  <script src='http://localhost:35729/livereload.js'></script> -->
-
-  <!-- Load the built library -->
-  <script src='../tmp/__spec-build.js'></script>
-</head>
-<body>
-  <!-- Required for browser reporter -->
-  <div id='mocha'></div>
 
 <script src='../dist/soucouyant.js'></script>
 <script>
